Update HTML elements

--- a/Public/accessories.html
+++ b/Public/accessories.html
@@ -24,7 +24,7 @@
 
     <div class="content-container">
         <div class="image-wrapper">
-            <img src="../img/accessories-collection.jpg" class="section-image" alt="">
+            <img src="../img/accessories-collection.jpg" role="img" class="section-image" alt="Accessories">
             <div class="text-overlay">
                 <h1 class="collection-title">Accessories</h1>
                 <p class="collection-short-des">From timeless classics  <br>to contemporary pieces,  <br>find the perfect accents to express <br> your unique elegance.</p>
