--- a/Public/addProduct.html
+++ b/Public/addProduct.html
@@ -41,7 +41,7 @@
             </div>
             <div class="upload-image-section">
                 <div class="upload-image-section-title">
-                    <img src="../img/camera-icon.png" alt="">
+                    <img src="../img/camera-icon.png" role="img" alt="Camera icon">
                     <p class="text">Upload images</p>
                 </div>
                 <form>
@@ -84,8 +84,8 @@
         <label for="tac">VFShop takes 30% from your total sell.</label>
 
         <div class="buttons">
-            <button class="btn" id="add-btn">Add product</button>
-            <button class="btn" id="save-btn">Save draft</button>
+            <button class="btn" id="add-btn" name="button" type="submit">Add product</button>
+            <button class="btn" id="save-btn" name="button" type="submit">Save draft</button>
         </div>
 
     </div>
