--- a/Public/cart.html
+++ b/Public/cart.html
@@ -37,7 +37,7 @@
             <div class="checkout-box">
                 <p class="text">Your total bill,</p>
                 <h1 class="bill">$00</h1>
-                <a href="/checkout" class="checkout-btn">checkout</a>
+                <a href="/checkout" class="checkout-btn" role="button" type="submit">checkout</a>
             </div>
         </div>
     </div>
