--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Attire Shop : Checkout</title>
 
-    <link rel="stylesheet" href="../css/signup.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="css/signup.css">
+    <link rel="stylesheet" href="css/home.css">
 
-    <link rel="stylesheet" href="../css/checkout.css">
-    <link rel="stylesheet" href="../css/cart.css">
+    <link rel="stylesheet" href="css/checkout.css">
+    <link rel="stylesheet" href="css/cart.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,7 @@
 
     <!--  hero section  -->
     <div class="alert-box">
-        <img src="img/error.png" class=alert-img alt="">
+        <img src="img/error.png" class=alert-img role="img" alt="Error">
         <p class="alert-msg"></p>
     </div>
 
@@ -57,8 +57,7 @@
             <div class="checkout-box">
                 <p class="text">Your total bill,</p>
                 <h1 class="bill">$00</h1>
-                <button class="place-order-btn">Place Order</button>
-
+                <button class="place-order-btn" name="button" type="submit" title="Place order">Place Order</button>
             </div>
         </div>
     </div>
@@ -66,13 +65,13 @@
 
     <footer></footer>
 
-    <script src="../js/nav.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/cart.js"></script>
-    <script src="../js/checkout.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/token.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/cart.js"></script>
+    <script src="js/checkout.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/token.js"></script>
+    <script src="js/search.js"></script>
 
 </body>
 </html>
