--- a/Public/index.html
+++ b/Public/index.html
@@ -75,7 +75,7 @@
     <!--  hero section  -->
     <header class="hero-section">
         <div class="content">
-            <img src="img/logo-green.png" class="logo" alt="">
+            <img src="img/logo-green.png" class="logo" role="img" alt="VFShop">
             <p class="sub-heading">Where Style Meets Elegance</p>
             <p class="sub-heading">and Fashion Knows No Bounds</p>
         </div>
@@ -83,122 +83,22 @@
 
     <!--  cards container  -->
     <section id="best-selling-products"></section>
-    <section class="product">
-        <h2 class="product-category">New Arrivals</h2>
-        <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
-        <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
-        <div class="product-container">
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">30% off</span>
-                    <img src="img/products/product_Diaz_Blouse_EB_IVE_Top_NZ_1.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">EB&IVE</h2>
-                    <p class="product-short-des">Diaz luxurious linen Blouse</p>
-                    <span class="price">$34.95</span><span class="actual-price">$75.45</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card2.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$22</span><span class="actual-price">$44</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card3.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$28</span><span class="actual-price">$56</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card4.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/products/product_NauticaClassicFitDeckPolo_1.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card6.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card7.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-            <div class="product-card">
-                <div class="product-image">
-                    <span class="discount-tag">50% off</span>
-                    <img src="img/card8.png" class="product-thumb" alt="">
-                    <button class="card-btn">add to wishlist</button>
-                </div>
-                <div class="product-info">
-                    <h2 class="product-brand">brand</h2>
-                    <p class="product-short-des">a short line about the cloth.</p>
-                    <span class="price">$20</span><span class="actual-price">$40</span>
-                </div>
-            </div>
-        </div>
-    </section>
+
+    <section id="new-arrivals"></section>
 
     <!--  COLLECTIONS  -->
+
     <section class="collection-container">
         <a href="/women" class="collection">
-            <img src="img/women-collection.jpg" alt="">
+            <img src="img/women-collection.jpg" role="img" alt="For Her: women collection">
             <p class="collection-title">For Her</p>
         </a>
         <a href="/men" class="collection">
-            <img src="img/men-collection.jpg" alt="">
+            <img src="img/men-collection.jpg" role="img" alt="For Him: men-collection">
             <p class="collection-title">For Him</p>
         </a>
         <a href="/accessories" class="collection">
-            <img src="img/accessories-collection.jpg" alt="">
+            <img src="img/accessories-collection.jpg" role="img" alt="accessories collection">
             <p class="collection-title">accessories</p>
         </a>
     </section>
@@ -214,14 +114,15 @@
     <section id="men-tshirt-products"></section>
     <footer></footer>
 
-    <script src="../js/nav.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/product.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/search.js"></script>
 
     <script>
         getProducts('Best selling').then(data => createProductSlider(data, '#best-selling-products', 'Best selling'));
+        getProducts('luxury').then(data => createProductSlider(data, '#new-arrivals', 'New Arrivals'));
         getProducts('Women Tshirt').then(data => createProductSlider(data, '#women-hot-products', 'Women Hot Specials'));
         getProducts('shoes').then(data => createProductSlider(data, '#shoes', 'Shoes'));
         getProducts('Men Tshirt').then(data => createProductSlider(data, '#men-tshirt-products', 'Men T-shirt'));
