--- a/Public/login.html
+++ b/Public/login.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-    <img src="img/loader.gif" class="loader" alt="">
+    <img src="img/loader.gif" class="loader" role="img" alt="Loading...">
 
     <div class="alert-box">
         <img src="img/error.png" class="alert-img" alt="">
@@ -28,12 +28,12 @@
 
     <div class="container">
         <a href="/">
-            <img class="logo" src="img/logo-green.png" alt="">
+            <img class="logo" src="img/logo-green.png" role="img" alt="VFShop">
         </a>
         <div>
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="new-password" id="password" placeholder="password">
-            <button class="submit-btn">Log In</button>
+            <button class="submit-btn" name="button" type="submit" title="Sign in">Log In</button>
         </div>
         <span>Don't  have an account? Create one</span>
         <a href="/signup" class="link">Sign up here</a>
