--- a/Public/mail.html
+++ b/Public/mail.html
@@ -58,9 +58,9 @@
 </head>
 <body>
     <div>
-        <a href="/"><img src="img/logo-green.png" class="logo" alt=""></a>
+        <a href="/"><img src="img/logo-green.png" class="logo" role="img" alt="VFShop"></a>
         <h1 class="heading">Dear user, <span>your order is successfully placed</span></h1>
-        <button class="btn">Check Status</button>
+        <button class="btn" name="button" type="submit" title="Order status">Check Status</button>
     </div>
 </body>
 </html>
