--- a/Public/product.html
+++ b/Public/product.html
@@ -41,7 +41,7 @@
 
             <p class="product-sub-heading">select size</p>
 
-            <input type="radio" name="size" value="xs" hidden id="xs-size">
+            <input type="radio" name="size" title="Select size: XS" aria-required="true" value="xs" hidden id="xs-size">
             <label for="xs-size" class="size-radio-btn">xs</label>
             <input type="radio" name="size" value="s" hidden id="s-size">
             <label for="s-size" class="size-radio-btn">s</label>
