--- a/Public/shoes.html
+++ b/Public/shoes.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VF Shop | Shoes</title>
 
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="../css/men.css">
     <link rel="stylesheet" href="../css/shoes.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
 
     <div class="content-container">
         <div class="image-wrapper">
-            <img src="../img/shoes-collection.jpg" class="section-image" alt="">
+            <img src="img/shoes-collection.jpg" class="section-image" alt="Shoes collection">
             <div class="text-overlay">
                 <h1 class="collection-title">Shoes Collection</h1>
                 <p class="collection-short-des">Step into elegance and style <br> with our shoe collection, <br> where fashion meets  <br> footwear trends for everybody.</p>
@@ -38,11 +38,11 @@
     <section id="you-also-may-like"></section>
 
     <footer></footer>
-    <script src="../js/nav.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/product.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/search.js"></script>
 
     <script>
         getProducts(`shoes`).then(data => createProductSlider(data, '#shoes', 'Shoes'))
