--- a/Public/terms.html
+++ b/Public/terms.html
@@ -25,7 +25,7 @@
         <div class="section-heading">
             <h1 class="heading">Terms and Conditions</h1>
             <p class="terms-info">Welcome to VF Shop!
-            <p class="terms-info">By using our website and services, you agree to the following terms:</p>
+            <p class="terms-info">By visiting our site you agree with these Terms and Conditions (“Terms”). Use of our site includes accessing, browsing or registering to use our site. Please read these Terms carefully before you start to use our site. We recommend that you print and keep a copy of these Terms for future reference. If you do not agree to these Terms of Use, you must not use our site. By using our site, you confirm that you accept these Terms and that you agree to comply with the following terms:</p>
         </div>
     </header>
 
@@ -56,8 +56,7 @@
 
     <section>
         <h3 class="heading">6. Image Attribution</h3>
-        <p class="terms-info">The hero images used on this site are sourced from <a href="https://www.freepik.com">Freepik</a>. The product images used on this site are sourced from the internet and do not belong to us.
-            We do not have rights to these images, and it is not recommended to copy or use them without proper authorization.</p>
+        <p class="terms-info">The hero images used on this site are sourced from <a href="https://www.freepik.com">Freepik</a>. Brand logo, moto and other trademarks are protected by copyright laws, you may not copy, modify or share or in any way exploit it, in whole or in part. Other content used on this site are sourced from the internet and do not belong to us. We do not have rights to these images and content, and it is not recommended to copy or use them without proper authorization.</p>
     </section>
 
     <section>
@@ -67,7 +66,7 @@
 
     <section>
         <h3 class="heading">8. Contact Us</h3>
-        <p class="terms-info">Have questions? Please google for assistance. We do not provide customer support, and all the contacts in Contact section are dummy.<br> </p>
+        <p class="terms-info">Have questions? Please google for assistance. We regret to inform you that we do not provide customer support, and all the contacts in Contact section are provided as examples and are not for actual use. Thank you for your understanding.<br> </p>
         <p class="terms-info">Thanks for choosing VF Shop website. Explore and discover the world of fashion.<br> </p>
     </section>
 
