--- a/Public/privacy.html
+++ b/Public/privacy.html
@@ -66,9 +66,9 @@
 
 
     <footer></footer>
-    <script src="../js/nav.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/search.js"></script>
 
 </body>
 </html>
