--- a/Public/checkout.html
+++ b/Public/checkout.html
@@ -49,7 +49,7 @@
         <div class="product-list">
             <p class="section-heading">your cart</p>
             <div class="cart">
-
+                <!-- cart product goes here -->
             </div>
 
         </div>
