--- a/Public/terms.html
+++ b/Public/terms.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/terms.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,7 @@
         <div class="section-heading">
             <h1 class="heading">Terms and Conditions</h1>
             <p class="terms-info">Welcome to VF Shop!
-            <p class="terms-info">By visiting our site you agree with these Terms and Conditions (“Terms”). Use of our site includes accessing, browsing or registering to use our site. Please read these Terms carefully before you start to use our site. We recommend that you print and keep a copy of these Terms for future reference. If you do not agree to these Terms of Use, you must not use our site. By using our site, you confirm that you accept these Terms and that you agree to comply with the following terms:</p>
+            <p class="terms-info">By visiting our site you agree with these Terms and Conditions (“Terms”). Use of our site includes accessing, browsing or registering to use our site. Please read these Terms carefully before you start to use our site. By using our site, you confirm that you accept these Terms and that you agree to comply with the following terms.</p>
         </div>
     </header>
 
@@ -56,7 +56,7 @@
 
     <section>
         <h3 class="heading">6. Image Attribution</h3>
-        <p class="terms-info">The hero images used on this site are sourced from <a href="https://www.freepik.com">Freepik</a>. Brand logo, moto and other trademarks are protected by copyright laws, you may not copy, modify or share or in any way exploit it, in whole or in part. Other content used on this site are sourced from the internet and do not belong to us. We do not have rights to these images and content, and it is not recommended to copy or use them without proper authorization.</p>
+        <p class="terms-info">The hero images used on this site are sourced from <a href="https://www.freepik.com">Freepik</a>. Brand logo, moto and other trademarks are protected by copyright laws, you may not copy, modify or share or in any way exploit it, in whole or in part. Other content used on this site are sourced from <a href="https://unsplash.com/">Unsplash</a>, <a href="https://pixabay.com/">Pixabay</a> and from other internet resources and do not belong to us, and it is not recommended to copy or use them without proper authorization.</p>
     </section>
 
     <section>
@@ -72,9 +72,9 @@
 
 
     <footer></footer>
-    <script src="../js/nav.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/search.js"></script>
 
 </body>
 </html>
