--- a/Public/accessories.html
+++ b/Public/accessories.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/men.css">
-    <link rel="stylesheet" href="../css/accessories.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/men.css">
+    <link rel="stylesheet" href="css/accessories.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../img/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../img/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../img/icons/favicon-16x16.png">
-    <link rel="manifest" href="../img/icons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 
     <div class="content-container">
         <div class="image-wrapper">
-            <img src="../img/accessories-collection.jpg" role="img" class="section-image" alt="Accessories">
+            <img src="img/accessories-collection.jpg" role="img" class="section-image" alt="Accessories">
             <div class="text-overlay">
                 <h1 class="collection-title">Accessories</h1>
                 <p class="collection-short-des">From timeless classics  <br>to contemporary pieces,  <br>find the perfect accents to express <br> your unique elegance.</p>
@@ -34,18 +34,22 @@
 
     <!-- sliders section> -->
     <section id="accessories"></section>
+    <section id="special-m"></section>
+    <section id="special-w"></section>
     <section id="you-also-may-like"></section>
 
     <footer></footer>
 
-    <script src="../js/nav.js"></script>
-    <script src="../js/footer.js"></script>
-    <script src="../js/home.js"></script>
-    <script src="../js/product.js"></script>
-    <script src="../js/search.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/home.js"></script>
+    <script src="js/product.js"></script>
+    <script src="js/search.js"></script>
 
     <script>
         getProducts('accessories').then(data => createProductSlider(data, '#accessories', 'Accessories'))
+        getProducts('gift for men').then(data => createProductSlider(data, '#special-m', 'Special for Him'))
+        getProducts('gift for women').then(data => createProductSlider(data, '#special-w', 'Special for Her'))
         getProducts('apparel').then(data => createProductSlider(data, '#you-also-may-like', 'You Also May Like'))
     </script>
 
